[package]
name = "doqxy"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A high-performance DNS proxy with DNS-over-QUIC (DoQ) support"
repository = "https://github.com/abihf/doqxy"
keywords = ["dns", "quic", "proxy", "dns-over-quic", "doq"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0"
bytes = "1.11.1"
hickory-proto = "0.26.0"
hickory-resolver = { version = "0.26.0" }
moka = { version = "0.12.13", features = ["future"] }
once_cell = "1.20.2"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-openssl = "0.3.1"
sd-notify = "0.5.0"
tokio = { version = "1.51", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "io-util",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "1.0.6"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"

[profile.native]
inherits = "release"
