[package]
name = "doqxy"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A high-performance DNS proxy with DNS-over-QUIC (DoQ) support"
repository = "https://github.com/abihf/doqxy"
keywords = ["dns", "quic", "proxy", "dns-over-quic", "doq"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.0"
hickory-proto = { version = "0.26.1", default-features = false }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["tokio"] }
moka = { version = "0.12.13", features = ["future"] }
once_cell = "1.20.2"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rustls = { version = "0.23.41", default-features = false, features = ["std", "tls12"] }
rustls-native-certs = "0.8.4"
rustls-openssl = "0.3.0"
sd-notify = "0.5.0"
tokio = { version = "1.51", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "io-util",
  "sync",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"

[profile.native]
inherits = "release"
